@@ -30,6 +30,7 @@ import org.apache.commons.lang3.builder.ToStringBuilder;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
@@ -228,7 +229,7 @@ public class ContentProject extends BaseDomainHelper {
     public List<ProjectSource> getActiveSources() {
         return sources.stream()
                 .filter(s -> !ProjectSource.State.DETACHED.equals(s.getState()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -321,7 +322,7 @@ public class ContentProject extends BaseDomainHelper {
         return getProjectFilters().stream()
                 .filter(f -> f.getState() != ContentProjectFilter.State.DETACHED)
                 .map(ContentProjectFilter::getFilter)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
