@@ -19,6 +19,7 @@ import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static java.util.Optional.empty;
 import static java.util.Optional.of;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import com.redhat.rhn.FaultException;
@@ -623,7 +624,7 @@ public class SystemHandler extends BaseHandler {
 
         List<Channel> childChannels = channelIds.stream()
                 .map(cid -> ChannelFactory.lookupByIdAndUser(cid, loggedInUser))
-                .toList();
+                .collect(toList());
 
         // consistent check
         long bid = baseChannel.map(Channel::getId).orElse(-1L);
@@ -644,7 +645,7 @@ public class SystemHandler extends BaseHandler {
                     baseChannel,
                     childChannels,
                     earliestOccurrence, null);
-            return action.stream().map(Action::getId).toList();
+            return action.stream().map(Action::getId).collect(toList());
         }
         catch (com.redhat.rhn.taskomatic.TaskomaticApiException e) {
             throw new TaskomaticApiException(e.getMessage());
@@ -1563,7 +1564,7 @@ public class SystemHandler extends BaseHandler {
             Optional.ofNullable(pi.getInstallTimeObj()).ifPresent(it -> item.put("installtime", it));
             item.put("retracted", pi.isRetracted());
             return item;
-        }).toList();
+        }).collect(toList());
     }
 
     /**
@@ -1609,7 +1610,7 @@ public class SystemHandler extends BaseHandler {
                 item.put("pending status", pi.getPending().equals("L") ? "Locking" : "Unlocking");
             }
             return item;
-        }).toList();
+        }).collect(toList());
     }
 
     /**
@@ -3912,7 +3913,7 @@ public class SystemHandler extends BaseHandler {
         // we need long values to pass to ErrataManager.applyErrataHelper
         List<Long> serverIds = sids.stream()
             .map(Integer::longValue)
-            .toList();
+            .collect(toList());
 
         if (!allowModules) {
             for (Long sid : serverIds) {
@@ -3926,7 +3927,7 @@ public class SystemHandler extends BaseHandler {
         }
         List<Long> eids = errataIds.stream()
             .map(Integer::longValue)
-            .toList();
+            .collect(toList());
 
         try {
             return ErrataManager.applyErrataHelper(loggedInUser,
@@ -4249,16 +4250,16 @@ public class SystemHandler extends BaseHandler {
 
         if (ActionFactory.TYPE_PACKAGES_UPDATE.equals(acT)) {
             List<Tuple2<Long, Long>> pidsidpairs = ErrataFactory.retractedPackages(
-                    packages.stream().map(Package::getId).toList(),
-                    sids.stream().map(Integer::longValue).toList()
+                    packages.stream().map(Package::getId).collect(toList()),
+                    sids.stream().map(Integer::longValue).collect(toList())
             );
             if (!pidsidpairs.isEmpty()) {
-                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).toList());
+                throw new RetractedPackageFault(pidsidpairs.stream().map(Tuple2::getA).collect(toList()));
             }
         }
 
         // Check if the package is part of a PTF. If true it cannot be manually installed/updated/ removed
-        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).toList();
+        List<Long> ptfPackages = packages.stream().filter(Package::isPartOfPtf).map(Package::getId).collect(toList());
         if (!ptfPackages.isEmpty()) {
             throw new PtfPackageFault(ptfPackages);
         }
@@ -4268,7 +4269,7 @@ public class SystemHandler extends BaseHandler {
             List<Long> ptfMasterPackages = packages.stream()
                                                    .filter(Package::isMasterPtfPackage)
                                                    .map(Package::getId)
-                                                   .toList();
+                                                   .collect(toList());
             if (!ptfMasterPackages.isEmpty()) {
                 throw new PtfMasterFault(ptfMasterPackages);
             }
@@ -4488,12 +4489,12 @@ public class SystemHandler extends BaseHandler {
                                          List<Integer> packageIds, Date earliestOccurrence, Boolean allowModules) {
 
         List<Tuple2<Long, Long>> retracted = ErrataFactory.retractedPackages(
-                packageIds.stream().map(Integer::longValue).toList(),
-                sids.stream().map(Integer::longValue).toList());
+                packageIds.stream().map(Integer::longValue).collect(toList()),
+                sids.stream().map(Integer::longValue).collect(toList()));
 
         List<Long> retractedPids = retracted.stream()
                 .map(Tuple2::getA)
-                .toList();
+                .collect(toList());
         if (retracted.isEmpty()) {
             return schedulePackagesAction(loggedInUser, sids,
                     packageIdsToMaps(loggedInUser, packageIds), earliestOccurrence,
@@ -4998,13 +4999,13 @@ public class SystemHandler extends BaseHandler {
         Set<Package> pkgsAlreadyLocked = new HashSet<>();
         List<Package> pkgsFindAlreadyLocked = PackageManager.lookupByIdAndUser(
                 lockedPackagesResult.stream().map(PackageListItem::getPackageId)
-                        .toList(), loggedInUser);
+                        .collect(toList()), loggedInUser);
         pkgsAlreadyLocked.addAll(pkgsFindAlreadyLocked);
 
         Set<Package> pkgsToLock = new HashSet<>();
         List<Package> pkgsFindToLock = PackageManager.lookupByIdAndUser(pkgIdsToLock
 
-                .stream().map(Integer::longValue).toList(), loggedInUser);
+                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
         pkgsFindToLock.stream().filter(Objects::nonNull).forEach(pkgsToLock::add);
 
         pkgsToLock.removeAll(pkgsAlreadyLocked);
@@ -5014,7 +5015,7 @@ public class SystemHandler extends BaseHandler {
 
         Set<Package> pkgsToUnlock = new HashSet<>();
         List<Package> pkgsFindToUnlock = PackageManager.lookupByIdAndUser(pkgIdsToUnlock
-                .stream().map(Integer::longValue).toList(), loggedInUser);
+                .stream().map(Integer::longValue).collect(toList()), loggedInUser);
         pkgsFindToUnlock.stream().filter(Objects::nonNull).forEach(pkgsToUnlock::add);
 
         pkgsToUnlock.forEach(x -> x.setLockPending(Boolean.TRUE));
@@ -8288,7 +8289,7 @@ public class SystemHandler extends BaseHandler {
                 .map(p -> new SUSEInstalledProduct(p.getName(), p.getVersion(),
                         p.getArch().getLabel(), p.getRelease(), p.isBaseproduct(),
                         p.getSUSEProduct().getFriendlyName()))
-                .toList();
+                .collect(toList());
     }
 
     /**
@@ -8663,10 +8664,10 @@ public class SystemHandler extends BaseHandler {
      * @apidoc.returntype #param("int", "actionId", "The action id of the scheduled action")
      */
     public Long scheduleApplyHighstate(User loggedInUser, List<Integer> sids, Date earliestOccurrence, Boolean test) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).collect(Collectors.toList());
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
-            Set<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
-                    .map(Server::getId).collect(toSet());
+            List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
+                    .map(Server::getId).toList();
             if (!visible.containsAll(sysids)) {
                 sysids.removeAll(visible);
                 throw new UnsupportedOperationException("Some System not managed with Salt: " + sysids);
@@ -8730,7 +8731,7 @@ public class SystemHandler extends BaseHandler {
      */
     public Long scheduleApplyStates(User loggedInUser, List<Integer> sids, List<String> stateNames,
             Date earliestOccurrence, Boolean test) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
             List<Long> visible = MinionServerFactory.lookupVisibleToUser(loggedInUser)
                     .map(Server::getId).toList();
@@ -9058,7 +9059,7 @@ public class SystemHandler extends BaseHandler {
      */
 
     public List<Long> changeProxy(User loggedInUser, List<Integer> sids, Integer proxyId) {
-        List<Long> sysids = sids.stream().map(Integer::longValue).toList();
+        List<Long> sysids = sids.stream().map(Integer::longValue).collect(toList());
         try {
             return ActionManager.changeProxy(loggedInUser, sysids, proxyId.longValue());
         }
