@@ -40,6 +40,7 @@ import org.cobbler.SystemRecord;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class SaltbootUtils {
     private static final Logger LOG = LogManager.getLogger(SaltbootUtils.class);
@@ -228,7 +229,7 @@ public class SaltbootUtils {
             Network k = new Network(con, hw);
             k.setMacAddress(hw);
             return k;
-        }).toList();
+        }).collect(Collectors.toList());
         system.setNetworkInterfaces(networks);
         system.enableNetboot(true);
         system.save();
