@@ -61,6 +61,7 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 
 import javax.websocket.OnClose;
 import javax.websocket.OnError;
@@ -146,7 +147,7 @@ public class RemoteMinionCommands {
                         .lookupVisibleToUser(webSession.getUser())
                         .filter(mm::isSystemInMaintenanceMode)
                         .map(MinionServer::getMinionId)
-                        .toList();
+                        .collect(Collectors.toList());
 
                 failAfter = FutureUtils.failAfter(timeOut);
 
@@ -226,7 +227,7 @@ public class RemoteMinionCommands {
                                             entry.getValue().result().orElse(false);
                                 })
                                 .map(Map.Entry::getKey)
-                                .toList();
+                                .collect(Collectors.toList());
 
                         previewedMinions.addAll(sshMinions);
 
